@@ -1,3 +1,13 @@
+2014-12-12  Anders Carlsson  <andersca@apple.com>
+
+        Remove a workaround for a bug that was fixed in Mountain Lion
+        https://bugs.webkit.org/show_bug.cgi?id=139605
+
+        Reviewed by Sam Weinig.
+
+        * WebCorePrefix.h:
+        (move): Deleted.
+
 2014-12-12  Zalan Bujtas  <zalan@apple.com>
 
         https://bugs.webkit.org/show_bug.cgi?id=139596
